# Recipes

basic/: EnumDefines.h  Huffman.h  StringUtils.cc  StringUtils.h  Utils.h
basic/test/: TestEnumDefines.cc  TestHuffman.cc  TestStringUtils.cc  test  test.cc
demo/VlcRenderingOnQtWindow/: CMakeLists.txt  main.cc
docs/cpp-template/: cp5-tricky-basics.md  cp6-enable-if.md  cp7-parameter-by-value-or-reference.md
myself/: 深入理解个人简历.md
myself/interview_review/: all.md  small.md
myself/work_related/: 巡课界面qt改写 - 视睿软件设计中心 - CVTE 知识库.html  远程互动助手带宽优化方案 - 视睿软件设计中心 - CVTE 知识库.html
myself/work_related/projs/av_delay_calculator/: .gitignore  README.md  av_sync.py  short_time_energy.cc  short_time_energy_extractor.py
myself/work_related/projs/http_transformat/: CMakeLists.txt  README.md
myself/work_related/projs/http_transformat/src/: CMakeLists.txt  main.cc
myself/work_related/projs/http_transformat/src/config_module/: configuration.cc  configuration_reader.cc  json_configuration_reader.cc  json_configuration_reader_impl.cc  json_configuration_reader_poco_impl.cc
myself/work_related/projs/http_transformat/src/http_module/: transcoding_request_handler.cc  transcoding_request_handler_factory.cc  transcoding_server.cc  upload_file_handler.cc
myself/work_related/projs/http_transformat/src/video_module/: ffmpeg_video_converter.cc  ffmpeg_video_converter_impl.cc  video_converter.cc
myself/work_related/projs/mp4_demuxer/: .main.cpp.swp  Avc1Box.cc  Avc1Box.h  AvcCBox.cc  AvcCBox.h  AvcFrameParser.cc  AvcFrameParser.h  AvcSliceHeader.cc  AvcSliceHeader.h  BitStream.cc  BitStream.h  Box.cc  Box.h  BoxCreater.cc  BoxCreater.h  BoxDefines.h  ByteConvert.cc  ByteConvert.h  CFileStream.cc  CFileStream.h  CMakeLists.txt  CppFileStream.cc  CppFileStream.h  CttsBox.cc  CttsBox.h  DinfBox.cc  DinfBox.h  DrefBox.cc  DrefBox.h  FileStream.cc  FileStream.h  FileStreamReader.cc  FileStreamReader.h  FtypBox.cc  FtypBox.h  H264Extractor.cc  H264Extractor.h  HdlrBox.cc  HdlrBox.h  MdatBox.cc  (+42 more)
myself/work_related/projs/shark2file/: .gitignore  CMakeLists.txt  README.md
myself/work_related/projs/shark2file/src/: CMakeLists.txt  FileUtils.cc  LinuxProgram.cc  Options.cc  PacketHandlerFactory.cc  Program.cc  RtpKey.cc  RtpLocalMediaDataExtractor.cc  RtpLocalOutputer.cc  RtpPacketFilter.cc  RtpPacketHandler.cc  RtpPacketHandlerFactory.cc  Utils.cc  WinProgram.cc  shark2file.cc
tmp/work_related/: 远程互动助手带宽优化方案详细设计 - 视睿软件设计中心 - CVTE 知识库.html
(+40 files in other folders)
